# cse396-codes

./: .gitignore  Readme.md  Scanner.py  main  raspicam.py  test.py  wiringPi_test.cpp
charts_server/: Makefile  client  client.cpp  raspberry  raspberry.cpp  server  server.cpp  thread.cpp  vertices.txt
charts_server/header/: communication_layer.h
converter/: CMakeCache.txt  CMakeLists.txt  Makefile  camtest.py  cmake_install.cmake  main  main.cpp  opencv.cpp  opencv_test.py  test  test.cpp  test.py  util.cpp
demoserver/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  configurations.txt  test  test.cpp
demoserver/header/: communication_layer.h  scanner.h
demoserver/source/: communication_layer.cpp  scanner.cpp
embed_code_test_python/: main.py  test.py  util.py
file_server/: Makefile  client  raspberry  raspberry.cpp  server  server.cpp
gpio_python/: test.py
hardware/: Makefile  main.cpp
imageprocessing/: 3dcomp  CMakeCache.txt  CMakeLists.txt  Makefile  camtest.py  client  cmake_install.cmake  comp  compression_client.cpp  compression_server.cpp  opencv  server  test  test.cpp
live_charts/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  scannedpoints.cpp  tabdialog.cpp  tabdialog.h
mobile/: README.md
normalization/: main.py
opencv_test/: CMakeCache.txt  Makefile  cmake_install.cmake  test  test.cpp
opencv_video/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
raspicam_cpp/: cam.cpp  cam.h  captured_image.ppm  main  main.cpp  outputjpg  test  test.cpp
wiringpi_cpp/: main.cpp
(+7 files in other folders)
